Adding new solution using deque interface